<resources>
    <string name="app_name">Mvp开原神付_Mua</string>
    <string name="moblie">请填写手机号码</string>
    <string name="password_tag">请填写密码</string>
    <string name="password_tag_sure">请再次填写密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="wrong_moblie">手机号码格式错误</string>
    <string name="wrong_password">密码格式错误</string>
    <string name="wrong_password_sure">两次密码不一致</string>

</resources>
