<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.imvpone.view.activity.RegisterActivity">
    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:text="@string/moblie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/rmoblie"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        />
    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:text="@string/password_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/rpassword"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        />
    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:text="@string/password_tag_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/rpassword_sure"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        />
    <TextView
        android:id="@+id/ralerting"
        android:textColor="#f00"
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/registers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            />

    </LinearLayout>

</LinearLayout>
