<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.imvpone.view.activity.MainActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:text="@string/moblie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/moblie"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        />
    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:text="@string/password_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        />
   <!-- <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:text="@string/password_tag_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password_sure"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        />-->
    <TextView
        android:id="@+id/alerting"
        android:textColor="#f00"
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            />
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            />

    </LinearLayout>

</LinearLayout>
